# YOLOv5-Lite

./: .gitignore  LICENSE  README.md  detect.py  eval.py  export.py  requirements.txt  test.py  train.py
Android/ncnn-android-yolov5/: local.properties
Android/ncnn-android-yolov5/app/src/main/java/com/tencent/ncnnyolox/: MainActivity.java
Android/ncnn-android-yolov5/app/src/main/jni/: yolox.h
Android/ncnn-android-yolov5/app/src/main/res/layout/: main.xml
Android/ncnn-android-yolov5/gradle/wrapper/: gradle-wrapper.properties
android_demo/ncnn-android-v5lite/: README.md  build.gradle  local.properties
android_demo/ncnn-android-v5lite/app/: build.gradle
android_demo/ncnn-android-v5lite/app/src/main/: AndroidManifest.xml
android_demo/ncnn-android-v5lite/app/src/main/assets/: e.param  s.param
android_demo/ncnn-android-v5lite/app/src/main/java/ncnn/v5lite/demo/: MainActivity.java  Ncnnv5lite.java
android_demo/ncnn-android-v5lite/app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yolov5.cpp  yolov5.h  yolov5ncnn.cpp
android_demo/ncnn-android-v5lite/app/src/main/res/values/: strings.xml
android_demo/ncnn-android-yolov5/: README.md
android_demo/ncnn-android-yolov5/app/src/main/: AndroidManifest.xml
android_demo/ncnn-android-yolov5/app/src/main/jni/: yolox.cpp
cpp_demo/mnn/: CMakeLists.txt  readme.md
cpp_demo/mnn/include/: util.h  utils.h
cpp_demo/mnn/src/: main.cpp  util.cpp  utils.cpp
cpp_demo/ncnn/: CMakeLists.txt  README.md  v5lite-s.cpp
cpp_demo/ncnn/model_zoo/: yolov5-lite-int8.param  yolov5-lite.param
cpp_demo/onnxruntime/: v5lite.cpp
cpp_demo/ort/: CMakeLists.txt  main.cpp  readme.md
cpp_demo/tengine/: CMakeLists.txt  README.md
cpp_demo/tensorrt/: CMakeLists.txt  README.md  config.yaml  main.cpp  v5lite.cpp  v5lite.h  yolov5.cpp  yolov5.h
cpp_demo/tensorrt/includes/common/: common.cpp  common.h  common.hpp  model.cpp  model.h
data/: coco.yaml  coco128.yaml  hyp.scratch.yaml  person.yaml  voc.yaml
mnn_demo/: README.md  v5lite-s-int4.mnn  v5lite-s.mnn
mnn_demo/checkpoints/: v5lite-s-int4.mnn  v5lite-s.mnn
mnn_demo/include/: Yolo.h
mnn_demo/src/: Yolo.cpp  main.cpp
models/: TPH-YOLOv5.yaml  common.py  experimental.py  export.py  v5Lite-c.yaml  v5Lite-g.yaml  v5Lite-n.yaml  v5Lite-s.yaml  yolo.py  yolov5-lite.yaml  yolov5s-shufflev2-0.5.yaml  yolov5s-shufflev2-1.0.yaml  yolov5s.yaml  yolov5ss-0.5.yaml
models/hub/: PicoDet-l.yaml  PicoDet-m.yaml  PicoDet-s.yaml  PicoDet-x.yaml  gcnet.yaml  yolov5-efficient-lite0.yaml  yolov5l.yaml  yolov5s-light-p4.yaml  yolov5s-light.yaml  yolov5s-mobilev3.yaml  yolov5ss-dw.yaml
ncnn/: README.md  v5lite-s.cpp
ncnn_Android/: README.md
ncnn_Android/ncnn-android-yolov5/: README.md
ncnn_Android/ncnn-android-yolov5/app/: build.gradle
ncnn_Android/ncnn-android-yolov5/app/src/main/assets/: yolov5i8.param  yolov5ss.param
ncnn_Android/ncnn-android-yolov5/app/src/main/java/com/tencent/ncnnyolox/: NcnnYolox.java
ncnn_Android/ncnn-android-yolov5/app/src/main/jni/: CMakeLists.txt  yoloxncnn.cpp
ncnn_Android/ncnn-android-yolov5/app/src/main/res/values/: strings.xml
ncnn_demo/: README.md  ncnn_readme.md  yolov5ss.cpp
ncnn_demo/model_zoo/: yolov5ss.param
openvino/: README.md
python_demo/onnxruntime/: main.py  ort.py  v5lite.py
python_demo/openvino/: README.md  openvino.py
python_demo/tensorrt/: gen_wts.py  v5liteg_convert.py
scripts/: Grad_Cam.py  autoanchor.py  check.py  coco2voc.py  convert.py  main.py  make_Txt.py  rep_convert.py  voc_label.py
tengine/: README.md  main.cpp
utils/: metrics.py
weights/: yolov5-lite.pt  yolov5ss.pt
